# kompilator

./: Cargo.toml  README.md  dzielenie.mr  input.txt  makefile  mnożenie.txt  myprogram.imp  program1.imp
maszyna_wirtualna/: maszyna-wirtualna
src/: constants.rs  grammar.lalrpop  intermediate.rs  main.rs  preprocessor.rs  procedures.rs  program_translator.rs  structure.rs  translator.rs  variables.rs
src/procedures/: assembly.rs  division.rs  mod.rs  multiplication.rs  procedures.rs  regular.rs  swap_vars.rs
testy/: error1.imp
